gh-2966 Improve the sql stats DB indexes